<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#444554"
        android:text="@string/textview"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#FFFFFFFF"
        android:fontFamily="@font/bmjua"
        android:textSize="30dp"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/nearMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bmjua"
        android:paddingTop="20dp"
        android:text="@string/question"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nearMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCheck"
        app:layout_constraintVertical_bias="0.527" />

    <ImageButton
        android:id="@+id/nearSubway"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/nearSubway"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/nearMe"
        app:layout_constraintTop_toBottomOf="@+id/nearMe"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/nearUniv"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/nearUniv"
        android:src="@color/teal_700"
        app:layout_constraintEnd_toStartOf="@+id/nearSubway"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nearMe"
        app:layout_constraintTop_toBottomOf="@+id/nearMe"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/nearMe"
        android:layout_width="345dp"
        android:layout_height="160dp"
        android:contentDescription="@string/nearMe"
        android:src="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>