<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/information"
            android:layout_width="128dp"
            android:layout_height="50dp"
            android:text="@string/information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lngText"
            app:layout_constraintStart_toStartOf="@+id/lngText"
            android:layout_gravity="center|bottom"
            tools:text="상세정보" />



        <TextView
            android:id="@+id/latText"
            android:layout_width="20dp"
            android:layout_height="14dp"
            android:text="@string/lat"
            app:layout_constraintBottom_toTopOf="@+id/lngText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lngText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lng"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_navi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toTopOf="@+id/include"
            app:srcCompat="@drawable/ic_baseline_menu_64dp" />

        <LinearLayout
            android:id="@+id/informationPage"
            android:layout_width="400dp"
            android:layout_height="274dp"
            android:layout_gravity="bottom"
            android:background="#ffffff66"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sliding Area" />
        </LinearLayout>


    </FrameLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/naviView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navi_menu">


    </com.google.android.material.navigation.NavigationView>
    <!-- android:layout_gravity="start"     start : 왼쪽-->


</androidx.drawerlayout.widget.DrawerLayout>